Add taskList and most of task and photo handling

--- a/MScProject.API/appsettings.json
+++ b/MScProject.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DB": "Host=localhost;Database=msc;User Id=postgres;Password=postgres;"
+  }
 }
