--- a/MScProject.Database/MScProject.Database.csproj
+++ b/MScProject.Database/MScProject.Database.csproj
@@ -5,4 +5,9 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    </ItemGroup>
+
 </Project>
