--- a/MScProject.API/appsettings.json
+++ b/MScProject.API/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoSettings": {
+    "Connection": "mongodb://127.0.0.1:27018/?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000",
+    "DatabaseName": "Msc"
+  }
 }
