Finish bson variant

--- a/MScProject.API/appsettings.json
+++ b/MScProject.API/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "MongoSettings": {
     "Connection": "mongodb://127.0.0.1:27018/?serverSelectionTimeoutMS=5000&connectTimeoutMS=10000",
-    "DatabaseName": "Msc"
+    "DatabaseName": "msc"
   }
 }
